<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    
    <TextView
        style="@android:style/TextAppearance.Large"
        android:text="@string/app_name"
        android:drawableLeft="@drawable/ic_launcher"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        />
    
    <ListView android:id="@+id/list_entries"
        android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:layout_weight="1"
        tools:listitem="@layout/layout_main_item"
        />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button android:id="@+id/button_add_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add_item"
            android:width="0px" android:layout_weight="1"
            />
        <Button android:id="@+id/button_enter_edit_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_enter_edit_mode"
            android:width="0px" android:layout_weight="1"
            />
        <Button android:id="@+id/button_exit_edit_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_exit_edit_mode"
            android:width="0px" android:layout_weight="1"
            />
    </LinearLayout>
</LinearLayout>